# dirk

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  TODO.md  signatures.json
api/: Cargo.toml
api/src/: main.rs
api/tests/: api.rs  hank.rs  prepare_db.rs  util.rs
client/: Cargo.toml
client/src/: main.rs
clients/: Cargo.toml
dirk_client/: Cargo.toml
dirk_client/src/: main.rs
dirk_core/: Cargo.toml
dirk_core/migration/: Cargo.toml
dirk_core/migration/src/: lib.rs  m20220417_000001_create_table.rs
dirk_core/src/: container.rs  dirk_api.rs  errors.rs  hank.rs  lib.rs  phpxdebug.rs  util.rs  yara.rs
dirk_core/src/entities/: file_rule_match.rs  files.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
dirk_core/src/models/: dirk.rs  hank.rs  mod.rs  yara.rs
src/: lib.rs  main.rs
src/entities/: files.rs  prelude.rs  sea_orm_active_enums.rs
tests/: api.rs  prepare_db.rs  util.rs
