[package]
name = "dirk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
base64 = "0.13"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
regex = "1"
tokio = {version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "time"]}
uuid = {version = "1.2", features = ["v4"]}