[package]
name = "dirk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
base64 = "0.13"
base64ct = "1.5"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"
phpxdebug-parser = { git = "https://github.com/fzylogic/phpxdebug-parser-rs.git", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
reqwest = {version = "0.11", features = ["json"] }
tokio = {version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "time"]}
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
uuid = {version = "1.2", features = ["serde", "v4"]}
walkdir = "2"