[package]
name = "dirk"
autobins = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dirk-api"
path = "src/main.rs"

[[bin]]
name = "parse-file"
path = "src/bin/parse-file.rs"

[[bin]]
name = "dirk-file"
path = "src/bin/dirk-file.rs"

[[bin]]
name = "dirk-scan"
path = "src/bin/dirk-scan.rs"

[[bin]]
name = "shasum-test"
path = "src/bin/shasum-test.rs"

[dependencies]
axum = "0.6"
base64 = "0.20"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
itertools = "0.10"
lazy_static = "1.4.0"
phpxdebug-parser = { git = "https://github.com/fzylogic/phpxdebug-parser-rs.git", branch = "main" }
sea-orm = { version = "0.10", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha256 = "1.1"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.22.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
walkdir = "2"
tracing = "0.1.37"
