[package]
name = "dirk_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
base64 = "0.20"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
hyper = "0.14.23"
itertools = "0.10"
lazy_static = "1"
phpxdebug-parser = { git = "https://github.com/fzylogic/phpxdebug-parser-rs.git", branch = "main" }
podman-api = "0.8.0"
regex = "1"
reqwest = "0.11"
sea-orm = { version = "0.10", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.5"
tempfile = "3.3.0"
tokio = { version = "1", features = ["time"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
